# a5

./: CMakeLists.txt
examples/: demo.cpp
include/numcpp/: numcpp.h
include/numcpp/calculus/: calculus.h
include/numcpp/core/: matrix.h  types.h  vector.h
include/numcpp/fft/: fft.h
include/numcpp/linalg/: eigenvalue.h  solver.h
include/numcpp/nonlinear/: root_finding.h
include/numcpp/ode/: ode_solver.h
include/numcpp/parallel/: parallel.h
include/numcpp/pde/: fdm.h
include/numcpp/sparse/: sparse_matrix.h
src/: CMakeLists.txt
src/calculus/: calculus.cpp
src/core/: matrix.cpp  vector.cpp
src/fft/: fft.cpp
src/linalg/: eigenvalue.cpp  solver.cpp
src/nonlinear/: root_finding.cpp
src/ode/: ode_solver.cpp
src/parallel/: parallel.cpp
src/pde/: fdm.cpp
src/sparse/: sparse_matrix.cpp
tests/: CMakeLists.txt  test_calculus.cpp  test_eigenvalue.cpp  test_fft.cpp  test_main.cpp  test_matrix.cpp  test_ode.cpp  test_parallel.cpp  test_pde.cpp  test_root_finding.cpp  test_solver.cpp  test_sparse.cpp  test_utils.h  test_vector.cpp
